fix: Improve JLineNativeLoader documentation and references (#1209)
Thoroughly document JLineNativeLoader and add references to it in related classes:
- Add comprehensive JavaDoc to JLineNativeLoader explaining how native libraries are loaded
- Add references to JLineNativeLoader in JniTerminalProvider with explicit initialization
- Add references to JLineNativeLoader in TerminalBuilder documentation
- Improve JLineLibrary documentation to explain its relationship with JLineNativeLoader

This improves the documentation of how native libraries are loaded and configured,
making it easier for users to understand and troubleshoot native library loading issues.

Fixes #1087